# signalwire-cpp

./: .clang-format  .clang-tidy  .gitignore  .php-cs-fixer.cache  ARTIFACT_DENY_ALLOW.md  CHANGELOG.md  CHECKLIST.md  CLAUDE.md  CMakeLists.txt  DOC_AUDIT_IGNORE.md  DOC_LANG_ALLOW.md  DOC_LINKS_ALLOW.md  PORT_ADDITIONS.md  PORT_OMISSIONS.md  PORT_SIGNATURE_OMISSIONS.md  README.md  REST_COVERAGE_GAPS.md  ROOT_HYGIENE_ALLOW.md  ROUTE_COLLISION_ALLOW.md  WIRED_MODES.md  WIRE_VIOLATIONS_ALLOW.md  audit_coverage.json  audit_coverage_baseline.json  port_signatures.baseline.json  port_signatures.json  port_surface.json
.claude/: settings.json
.github/workflows/: doc-audit.yml  live-smoke.yml  multi-os.yml  nightly.yml  release.yml  surface-audit.yml  test.yml
.sw-test-tmp/: cl_basic.json  cl_default.json  cl_merge.json  cl_missing.json  cl_section.json  cl_subst.json
cmake/: signalwireConfig.cmake.in  version.hpp.in
docs/: MIGRATION-2.0.md  agent_guide.md  api_reference.md  architecture.md  cli_guide.md  cloud_functions_guide.md  configuration.md  contexts_guide.md  datamap_guide.md  llm_parameters.md  mcp_gateway_reference.md  mcp_integration.md  sdk_features.md  security.md  skills_parameter_schema.md  skills_system.md  swaig_reference.md  swml_service_guide.md  third_party_skills.md  web_service.md
examples/: README.md  advanced_datamap.cpp  auto_vivified.cpp  call_flow.cpp  comprehensive_dynamic.cpp  contexts_demo.cpp  custom_path.cpp  datamap_demo.cpp  datasphere.cpp  datasphere_multi_instance.cpp  datasphere_serverless_env.cpp  datasphere_webhook_env.cpp  declarative.cpp  dynamic_info_gatherer.cpp  dynamic_swml_service.cpp  gather_info.cpp  joke_agent.cpp  joke_skill.cpp  kubernetes.cpp  lambda_agent.cpp  llm_params.cpp  mcp_gateway.cpp  multi_agent_server.cpp  multi_endpoint.cpp  prefab_concierge.cpp  prefab_faq_bot.cpp  prefab_info_gatherer.cpp  prefab_receptionist.cpp  prefab_survey.cpp  quickstart_agent.cpp  quickstart_relay.cpp  quickstart_rest.cpp  record_call.cpp  relay_answer_and_welcome.cpp  relay_demo.cpp  rest_audit_harness.cpp  rest_demo.cpp  room_and_sip.cpp  session_state.cpp  simple_agent.cpp  (+11 more)
include/signalwire/: common.hpp  logging.hpp  signalwire.hpp  signalwire_agents.hpp  signalwire_agents_c.h  signalwire_c.h
include/signalwire/agent/: agent_base.hpp
include/signalwire/agents/: bedrock.hpp
include/signalwire/ai_chat/: ai_chat_client.hpp
include/signalwire/contexts/: contexts.hpp
include/signalwire/core/: auth_handler.hpp  config_loader.hpp  logging_config.hpp  pom_builder.hpp  security_config.hpp  swaig_function.hpp  swml_builder.hpp  swml_handler.hpp  (+1 more)
relay/: README.md
relay/docs/: call-methods.md  client-reference.md  events.md  getting-started.md  messaging.md
relay/examples/: relay_answer_and_welcome.cpp  relay_dial_and_play.cpp  relay_ivr_connect.cpp
rest/: README.md
rest/docs/: calling.md  client-reference.md  compat.md  fabric.md  getting-started.md  namespaces.md  phone-binding.md
rest/examples/: rest_10dlc_registration.cpp  rest_bind_phone_to_swml_webhook.cpp  rest_calling_ivr_and_ai.cpp  rest_calling_play_and_record.cpp  rest_compat_laml.cpp  rest_datasphere_search.cpp  rest_fabric_conference_rooms.cpp  rest_fabric_conferences_and_routing.cpp  rest_fabric_subscribers_and_sip.cpp  rest_fabric_swml_and_callflows.cpp  rest_manage_resources.cpp  rest_phone_number_management.cpp  rest_queues_mfa_and_recordings.cpp  rest_video_rooms.cpp
scripts/: _cpp_fmt.py  _env.sh  clang_tidy_cache.py  enumerate_signatures.py  enumerate_surface.py  generate_relay_protocol.py  generate_rest.py  generate_rest_tests.py  generate_swaig_payloads.py  generate_swml_verbs.py  run-ci.sh  run-format.sh  run-lint.sh  run-tests.sh
src/: signalwire.cpp
src/agent/: agent_base.cpp
src/agents/: bedrock.cpp
src/ai_chat/: ai_chat_client.cpp
src/c_api/: signalwire_agents_c.cpp  signalwire_c.cpp
src/contexts/: contexts.cpp
src/core/: auth_handler.cpp  config_loader.cpp  logging_config.cpp  pom_builder.cpp  security_config.cpp  swaig_function.cpp  swml_builder.cpp  swml_handler.cpp  swml_renderer.cpp
src/datamap/: datamap.cpp
src/logging/: logger.cpp
src/pom/: pom.cpp
src/prefabs/: concierge.cpp  faq_bot.cpp  info_gatherer.cpp  receptionist.cpp  survey.cpp
src/relay/: action.cpp  call.cpp  client.cpp  event.cpp  message.cpp  websocket.cpp
src/rest/: http_client.cpp  rest_client.cpp
src/security/: security_utils.cpp  session_manager.cpp  webhook_middleware.cpp  webhook_validator.cpp
src/server/: agent_server.cpp  tls_server.hpp
src/skills/: skill_manager.cpp  skill_registry.cpp  skills_http.cpp
src/swaig/: function_result.cpp  type_inference.cpp
src/swml/: document.cpp  schema.cpp  service.cpp
src/utils/: schema_utils.cpp  serverless.cpp  url_validator.cpp
src/web/: web_service.cpp
tests/: mocktest.cpp  mocktest.hpp  relay_mocktest.cpp  relay_mocktest.hpp  test_agent.cpp  test_ai_chat_client.cpp  test_aiconfig.cpp  test_auth_handler.cpp  test_bedrock_agent.cpp  test_cli.cpp  test_config_loader.cpp  test_contexts.cpp  test_datamap.cpp  test_execution_mode.cpp  test_function_result.cpp  test_handle_request.cpp  test_main.cpp  test_media_enums.cpp  test_parameter_schema.cpp  test_pom.cpp  test_pom_builder.cpp  test_prefab_tools.cpp  test_prompt.cpp  test_relay.cpp  test_relay_actions_subclasses.cpp  test_relay_call.cpp  test_relay_mock_actions.cpp  test_relay_mock_connect.cpp  test_relay_mock_convenience.cpp  test_relay_mock_event_dispatch.cpp  test_relay_mock_inbound_call.cpp  test_relay_mock_outbound_call.cpp  test_relay_states.cpp  test_relay_states_mock.cpp  test_relay_typed_events.cpp  test_request_options.cpp  test_rest.cpp  test_rest_calling.cpp  test_rest_error_observability.cpp  test_rest_fabric.cpp  (+66 more)
tools/: ai_chat_dump.cpp  doc_wire_dump.cpp  emit_corpus.cpp  emit_skills.cpp  envelope_dump.cpp  http_dump.cpp  live_smoke.cpp  pagination_dump.cpp  relay_liveness_dump.cpp  route_registry.cpp  state_dump.cpp  strict_render_dump.cpp  swml_dump.cpp  wait_liveness_dump.cpp  wire_dump.cpp  wire_relay_dump.cpp
(+360 files in other folders)
